# Goddard

./: .gitignore  README.md  diagnose_imitation.py  evaluation.py  gaifo.py  imitation.py  imitation_dataset.py  pyproject.toml  replay_dataset.py  replay_states.py  rewards.py  train.py  training_checkpoint.py  watch_checkpoints.py
tests/: test_hybrid_reward.py  test_imitation.py  test_replay_filtering.py  test_training_checkpoint.py
web/checkpoint/: app.js  index.html
